updated submenu items to be centered

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -52,6 +52,9 @@ nav li {
 
 .dropdown-item {
     text-decoration: none;
+    margin: 0;
+    padding: 0 5px; 
+    text-align: center;
     color: black;
 }
 
