--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -23,6 +23,7 @@ color: black;
     width: 100%;
     margin: 0;
     padding: 5px 5px;
+    text-align: center;
 }
 
 .header-home {
@@ -44,18 +45,29 @@ color: black;
     padding: 10px 10px;
 }
 
-nav li {
-    margin: 0;
-    padding: 0 5px; 
+a.dropdown-item {
+    justify-content: center;    
+    flex-wrap: wrap;
     text-align: center;
-}
-
-.dropdown-item {
     text-decoration: none;
     margin: 0;
-    padding: 0 5px; 
-    text-align: center;
+    padding: 5px; 
     color: black;
+    padding: 5px;
+    margin: 5px;
+}
+
+div.dropdown-menu.show {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.nav-item {
+    margin-left: 15px;
+    margin-right: 15px;
+    padding: 5px;
+    text-align: center;
 }
 
 #content a {
