--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -4,149 +4,245 @@ who{ what: how;}*/
 /* ================================= 
   Base Element Styles
 ==================================== */
-@import url ('https://fonts.googleapis.com/css?family=Thasadith:400,700');
-
+@import url('https://fonts.googleapis.com/css?family=Thasadith:400,700');
 * {
-
     box-sizing: border-box;
-
 }
 
 body {
-background: rgb(141, 156, 156);
-font-family: Thasadith, sans-serif;
-line-height: 1.6;
+    background: rgb(141, 156, 156);
+    font-family: Thasadith, sans-serif;
+    line-height: 1.6;
 }
 
 a {
     text-decoration: none;
-    color: rgb(58, 65, 56);
- }
-
- img {
-    max-width: 100%;
-    border-radius: 10px;
+    color: whitesmoke;
  }
 
  /* ================================= 
   Base Layout Styles
 ==================================== */
 
-.wrap {
-
-    min-height: calc(100vh - 121px);
-
+.container {
+    width: 70%;
+    padding: 2em;
+    margin: 0 auto;
 }
-
-#wrapper { 
-    padding-left: 1em;
-    padding-right: 1em;
- }
- 
 
  /* ---- Header Styles ---- */
-.header {
+
+ .main-header {
+    width: 100%;
     background: rgb(58, 65, 56);
-    width: 100%;
-	margin: 0;
-	padding: 10px;
-}
+    padding-top: 120px;
+    background-image: url('../img/thread.jpg');
+    background-repeat: no-repeat;
+    margin: 0 auto;
+    opacity: 75%;
+ }
 
-.subheader {
-	background: rgb(58, 65, 56);
-    width: 100%;
-	font-size: 16px;
-	margin: 0;
-	padding-top: 5px;
-	padding-bottom: 10px;
-	padding-left: 10px;
-	padding-right: 10px;
-}
-
-.header-home {
-    text-decoration: none;
+#header-h1 {
     color: whitesmoke;
-}
+    font-size:  90px; /* 5.625rem;*/
+    text-transform: uppercase;
+    line-height: 1.3;
+    text-align: center;
+    font-weight: bold;
+    margin: 0 auto;
+ }
 
-.header-home:hover,
-.header-home:visited {
-    text-decoration: none;
+ .title {
+
     color: whitesmoke;
+    font-size: 26px;
+    text-align: center;
+    font-weight: bold;
 }
 
 
-/* ---- Navigation ---- */
+ #header-span a:link,
+ a:visited, 
+ a:hover,
+ a:active  {
+ text-decoration: none;
+}
 
+/*Menu Styling*/
 
-.nav-item {
-    margin-left: 10px;
-    margin-right: 10px;
-    padding: 0;
+a.nav-link {
+    margin-right: 2em;
+    margin-left: 2em;
     text-align: center;
 }
 
-div.dropdown-menu.show {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-}
+a.dropdown-item {
 
-#sm-content a:hover {
-    text-decoration: none;
-    background: rgb(58, 65, 56);
-    color: whitesmoke;
-    padding: 10px;
-    border-radius: 5px;
+    text-align: center;
 }
 
 /*Portfolio Styling*/
 
-#gallery {
-    margin: o;
-    padding o;
-    list-style: none;
-    display: block;
+img {
+    width: 275px;
+    height: 175px;
+    border-radius: 15px;
 }
 
-#gallery li {
-    float: left;
-    margin: 3px;
-    width: 40%;
+.sweater,
+.tools {
+    width: 40.5%;
+    padding-bottom: 5em;
 }
 
-.photo-creds {
-    float: left;
-    display: inline-flex;
+.tools {
+  float: right;
+ }
+
+.sweater {
+  float: left;
 }
 
-.photo-creds p {
+#sew {
+    
+    text-align: left;
+    
+}
+
+.group:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+/*Link styling*/
+
+nav.navbar.navbar-expand-md.navbar-dark.bg-dark.sticky-top {
+
+    margin: 0 auto;
+}
+
+.sm-content a {
+    color: black;
+}
+
+.sm-content a:hover {
+
+    background: rgb(58, 65, 56);
+    color: whitesmoke;
     padding: 5px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    border-radius: 10px;
 }
-
-
-
 /*Footer Styling*/
 
 .footer {
     background: rgb(58, 65, 56);
     color: whitesmoke;
-    padding: 2em 0;
-	text-align: center;		
+    width: 100%;
+    text-align: center;
+    padding: 1em;
 }
 
 /*Media Queries*/
 
-@media (min-width: 769px) {
-    #wrapper {
-    width: 100%;
-    max-width: 1000px;
-    margin: 0 auto;
+
+@media (min-width: 760px) { /*default*/
+
+    
+    .wrap {
+        min-height: calc(100vh - 73px);    
     }
+
 }
 
-@media (max-width: 769px) {
-.header, 
-.subheader {
-    text-align: center;
+@media (min-width: 760px) and (max-width: 1366px) { /*default*/
+
+    
+    .wrap {
+        min-height: calc(100vh - 73px);    
+    }
+
+    .container {
+
+        width: auto;
+    }
+
 }
 
+
+@media (min-height: 760px) {
+
+    .wrap {
+        min-height: calc(100vh - 73px);    
+    }
+
+    .container {
+        width: auto;
+    }
+
+}
+
+/*
+
+@media (min-width: 1024px) and (min-height: 768px) {   
+
+
+    .container {
+        width: 100%;
+    } 
+
+    .wrap {
+        min-height: calc(110vh - 105px);    
+    }
+
+
+} */
+
+/*
+
+@media (min-width: 700px) and (min-height: 400px) {   
+
+
+    .container {
+        width: 100%;
+    } 
+
+    .wrap {
+        min-height: calc(100vh - 105px);    
+    }
+
+    .sweater, 
+    .tools {
+        display: block;
+        float: none;
+        padding: 5px;
+        }
+
+}*/
+
+@media (max-width: 760px) {
+
+    .sweater, 
+    .tools {
+        display: block;
+        float: none;
+        padding: 5px;
+        }
+    
+
+    .container {
+        width: 100%;
+    }    
+ 
+    #header-h1 {
+        text-align: center;
+        font-size: 40px;    
+    }
+
+    .title {
+        text-align: center;
+        font-size: 16px;
+    }
+
+}
